src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>ACTION__c</fullName>
        <label>ACTION</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AF_interests__c</fullName>
        <label>AF - interests</label>
        <picklist>
            <picklistValues>
                <fullName>Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnostics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ablation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ANZ_ID__c</fullName>
        <externalId>true</externalId>
        <label>ANZ ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ASD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ablation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ablation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountREgion__c</fullName>
        <formula>Account.USD_AF_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_City__c</fullName>
        <formula>Account.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Country__c</fullName>
        <formula>Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_State__c</fullName>
        <formula>Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>SJM Customer, Prospective</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Sub_Type__c</fullName>
        <inlineHelpText>Sub Type of Activity</inlineHelpText>
        <label>Activity Sub Type</label>
        <picklist>
            <controllingField>Activity_Type__c</controllingField>
            <picklistValues>
                <fullName>Congress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-office meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case coverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customized education visit (Meeting with VIP customer at SJM facility)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive meeting (Meeting with customer and SJM executive outside of SJM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer dinner (Dinner meeting with no P2P education)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grand rounds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programming support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peer-to-peer event (Dinner talk, webinar, symposium, lunch &amp; learn, preceptorship)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proctorship (Procedure support provided on site by experienced DBS surgeon)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peer-to-peer referral program (Local events designed to generate referrals for speaker)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient education event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web search results</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient support page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community awareness day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-person (by rep/office)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Ambassador</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCP Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBS Implant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBS Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assignment_Status__c</fullName>
        <label>Assignment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Uncovered</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM__c</fullName>
        <label>CRM-interests</label>
        <picklist>
            <picklistValues>
                <fullName>Low Voltage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heart Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connectivity</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Call_in_Date__c</fullName>
        <label>Call in Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Caller_Name__c</fullName>
        <label>Caller Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_Phone__c</fullName>
        <label>Caller Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Candidate_Stage__c</fullName>
        <label>Candidate Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Capital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Connectivity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Connectivity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diagnostic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diagnostic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <formula>ActivityDateTime + (DurationInMinutes / 1440)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <formula>&quot;Procedure&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_URL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))</formula>
        <label>Event URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Details__c</fullName>
        <label>Executive Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Executive_Team_Notes_2__c</fullName>
        <label>Executive Team Notes 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Executive_Team_Notes_3__c</fullName>
        <label>Executive Team Notes 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Executive_Team_Notes__c</fullName>
        <description>This field is only visible to the executive team</description>
        <inlineHelpText>This field is only visible to the executive team</inlineHelpText>
        <label>Executive Team Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FFR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FFR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Heart_Failure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Heart Failure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LAA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy__c</fullName>
        <externalId>true</externalId>
        <label>Legacy AppntID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Low_Voltage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Low Voltage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEED__c</fullName>
        <label>NEED</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OCT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OCT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityStage__c</fullName>
        <label>OpportunityStage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PDA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PFO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PS_Modified__c</fullName>
        <label>PS_Modified</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Last_Name__c</fullName>
        <label>Patient Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Case_Will_Use__c</fullName>
        <label>Primary Case Will Use</label>
        <picklist>
            <controllingField>Primary_Diagnosis__c</controllingField>
            <picklistValues>
                <fullName>NavX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Array</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catheter Eval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agilis Eval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sick Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preventative Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Coverage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Diagnosis__c</fullName>
        <label>Primary Diagnosis</label>
        <picklist>
            <picklistValues>
                <fullName>AFIB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AV Node</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVNRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Device Clinic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RVOT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sinus Node</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SVT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WPW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Procedure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Procedure</label>
        <referenceTo>Procedure__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Call_ID__c</fullName>
        <label>Related Call ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renal_D__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renal D</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SI_interests__c</fullName>
        <label>SI - interests</label>
        <picklist>
            <picklistValues>
                <fullName>ASD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VSD</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SJM_Id__c</fullName>
        <formula>Account.SJM_ID__c</formula>
        <label>SJM Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMART_GOAL_OVERVIEW__c</fullName>
        <defaultValue>&quot;&lt;ENTER YOUR SMART GOAL HERE&gt;&quot;</defaultValue>
        <description>This is one sentence that encapsulates your SMART GOAL</description>
        <inlineHelpText>This is one sentence that encapsulates your SMART GOAL</inlineHelpText>
        <label>SMART GOAL OVERVIEW</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Search_Terms__c</fullName>
        <formula>Account.Search_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Search Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Case_Will_Use__c</fullName>
        <label>Secondary Case Will Use</label>
        <picklist>
            <controllingField>Secondary_Diagnosis__c</controllingField>
            <picklistValues>
                <fullName>NavX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Array</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catheter Eval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agilis Eval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sick Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preventative Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Coverage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Diagnosis__c</fullName>
        <label>Secondary Diagnosis</label>
        <picklist>
            <picklistValues>
                <fullName>AFIB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AV Node</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVNRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Device Clinic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RVOT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sinus Node</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SVT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WPW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SortByUncovered__c</fullName>
        <formula>if(CONTAINS(Owner:User.LastName , &apos;Uncovered&apos;), &apos;True&apos;,&apos;False&apos;)</formula>
        <label>SortByUncovered</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <formula>ActivityDateTime</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Category__c</fullName>
        <formula>Owner:User.User_Category__c</formula>
        <label>User Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VSD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VSD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vascular_Closure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vascular Closure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vascular_Interests__c</fullName>
        <label>Vascular - Interests</label>
        <picklist>
            <picklistValues>
                <fullName>OCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VCD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RENAL D</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>fceEmail__c</fullName>
        <formula>Owner:User.Email</formula>
        <label>fceEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcePhone__c</fullName>
        <formula>Owner:User.Phone</formula>
        <label>fcePhone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fceRegion__c</fullName>
        <formula>Owner:User.Region__c</formula>
        <label>fceRegion</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>